--- a/seq2seq_dates.ipynb
+++ b/seq2seq_dates.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "## Download dataset\n",
     "\n",
-    "We'll be using the English to Japanese katakana characters dataset from [English to Katakana using a Sequence-to-Sequence model](https://github.com/wanasit/katakana)."
+    "We'll be using an automatically generated dataset of freeform and standardized dates."
    ]
   },
   {
