--- a/hf_seq2seq_test_lemmatization.ipynb
+++ b/hf_seq2seq_test_lemmatization.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24fd4be9",
+   "id": "696421a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c58fe405",
+   "id": "c3cca60c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "911548ef",
+   "id": "c0a941f6",
    "metadata": {},
    "source": [
     "You can use UD_English-EWT for English"
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3204402f",
+   "id": "fb07ab63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68ab560a",
+   "id": "05ab6fe0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,92 +106,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f32eb4d",
+   "id": "71cbccd1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64d69451",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
-   "outputs": [],
-   "source": [
-    "ID,FORM,LEMMA,UPOS,XPOS,FEAT,HEAD,DEPREL,DEPS,MISC=range(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6fb34d6",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
-   "outputs": [],
-   "source": [
-    "def yield_examples(fname,uniq=True):\n",
-    "    with open(fname) as f:\n",
-    "        seen=set()\n",
-    "        for line in f:\n",
-    "            line=line.rstrip(\"\\n\")\n",
-    "            if not line or line.startswith(\"#\"): #empty and comment lines: skip\n",
-    "                continue\n",
-    "            cols=line.split(\"\\t\")\n",
-    "            if not cols[0].isnumeric(): #lines which are not a real word: skip\n",
-    "                continue\n",
-    "            form_tags,lemma=cols[FORM]+\"+++\"+cols[UPOS]+\"|\"+cols[FEAT],cols[LEMMA]\n",
-    "            if uniq:\n",
-    "                if (form_tags,lemma) in seen:\n",
-    "                    continue\n",
-    "                seen.add((form_tags,lemma))\n",
-    "            #and here is the example\n",
-    "            yield {\"form_tags\":form_tags,\"lemma\":lemma}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e39609e2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#turn every .conllu into the corresponding .jsonl with the examples\n",
-    "for fname in (\"train.conllu\",\"validation.conllu\",\"test.conllu\"):\n",
-    "    with open(fname.replace(\".conllu\",\".jsonl\"),\"wt\") as f_out:\n",
-    "        for example in yield_examples(fname):\n",
-    "            print(json.dumps(example,ensure_ascii=False,sort_keys=True),file=f_out)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ebf1501",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the dataset, this is easy since we have\n",
-    "# each section in a separate file\n",
+    "import json\n",
     "import datasets"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3415436d",
+   "id": "3fef8dbd",
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset = datasets.load_dataset(\n",
     "    'json',                             # Format of the data\n",
-    "    data_files={\"train\":\"train.jsonl\",\"validation\":\"validation.jsonl\",\"test\":\"test.jsonl\"},\n",
+    "    data_files={\"test\":\"test.jsonl\"},\n",
     "    split={\n",
-    "        \"train\":\"train\",\n",
-    "        \"validation\":\"validation\",\n",
     "        \"test\":\"test\"\n",
     "    },\n",
     "    features=datasets.Features({    # Here we tell how to interpret the attributes\n",
@@ -204,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9b1c7a5",
+   "id": "1c8a707d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,17 +148,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e011dfa",
+   "id": "f6702c6c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset"
+    "print(dataset)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a001758",
+   "id": "3fe89ee4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99159d2b",
+   "id": "e4982a08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,25 +178,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8df700bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#OK, let's try with our trusty tokenizer\n",
-    "#but why would this work in the first place?\n",
-    "model_name = \"TurkuNLP/bert-base-finnish-cased-v1\"\n",
-    "tokenizer = transformers.AutoTokenizer.from_pretrained(model_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61f95679",
+   "id": "b7a8d8ac",
    "metadata": {
     "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
+    "#OK, let's try with our trusty tokenizer\n",
+    "#but why would this work in the first place?\n",
+    "model_name = \"TurkuNLP/bert-base-finnish-cased-v1\"\n",
+    "tokenizer = transformers.AutoTokenizer.from_pretrained(model_name)\n",
+    "tokenizer.add_special_tokens({ \"additional_special_tokens\": [ \"[unused1]\", \"[unused2]\" ] })\n",
     "\"\"\"the examples are formed surprisingly similarly to what you've seen before:\n",
     "\n",
     "* `input_ids` is the input side\n",
@@ -276,19 +201,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af16e09b",
+   "id": "7d493d54",
    "metadata": {
     "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
     "def tokenize(example):\n",
-    "\n",
+    "    \n",
     "    inp_w,inp_tags=example[\"form_tags\"].split(\"+++\",1)\n",
     "    out=\" \".join(example[\"lemma\"])\n",
     "    \n",
-    "    inp_tok=tokenizer(\"^ \"+\" \".join(inp_w)+\" \"+(inp_tags.replace(\"|\",\" \"))+\" $\",truncation=True)\n",
-    "    outp_tok=tokenizer(\"^ \"+out+\" $\",truncation=True)\n",
+    "    inp_tok=tokenizer(\"[unused1] \"+\" \".join(inp_w)+\" \"+(inp_tags.replace(\"|\",\" \"))+\" [unused2]\",truncation=True)\n",
+    "    outp_tok=tokenizer(\"[unused1] \"+out+\" [unused2]\",truncation=True)\n",
+    "\n",
     "    return {\"input_ids\":inp_tok[\"input_ids\"],\n",
     "            \"attention_mask\":inp_tok[\"attention_mask\"],\n",
     "            \"labels\":outp_tok[\"input_ids\"]}"
@@ -297,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69fc44f8",
+   "id": "2df4b338",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,38 +233,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab74228f",
+   "id": "94855d86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_encoder = transformers.BertConfig(vocab_size=tokenizer.vocab_size,\n",
-    "                                         hidden_size=128,\n",
-    "                                         num_hidden_layers=4,\n",
-    "                                         num_attention_heads=4,\n",
-    "                                         )\n",
-    "config_decoder = transformers.BertConfig(vocab_size=tokenizer.vocab_size,\n",
-    "                                         hidden_size=128,\n",
-    "                                         num_hidden_layers=4,\n",
-    "                                         num_attention_heads=4,\n",
-    "                                         decoder_start_token_id=55)\n",
-    "config = transformers.EncoderDecoderConfig.from_encoder_decoder_configs(config_encoder, config_decoder)\n",
-    "config.decoder_start_token_id=53\n",
-    "config.pad_token_id=0\n",
-    "model = transformers.EncoderDecoderModel(config=config)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "affe71ac",
-   "metadata": {},
-   "source": [
-    "help(model.forward)"
+    "model = transformers.AutoModelForSeq2SeqLM.from_pretrained(\"s2s_lemmatizer\")\n",
+    "#help(model.forward)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45778e85",
+   "id": "5aaea6ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,26 +257,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b527b308",
+   "id": "e9458682",
    "metadata": {},
    "outputs": [],
    "source": [
     "lst=[]\n",
-    "for e in dataset[\"train\"]:\n",
+    "for e in dataset[\"test\"]:\n",
     "    lst.append({\"input_ids\":e[\"input_ids\"],\"labels\":e[\"labels\"],\"attention_mask\":e[\"attention_mask\"]})\n",
     "    break\n",
     "batch=collator(lst)\n",
-    "batch"
+    "print(batch)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c73108a",
+   "id": "af7dfec9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer_args = transformers.TrainingArguments(\n",
+    "trainer_args = transformers.Seq2SeqTrainingArguments(\n",
     "    \"checkpoints\",\n",
     "    evaluation_strategy=\"steps\",\n",
     "    logging_strategy=\"steps\",\n",
@@ -379,16 +285,26 @@
     "    logging_steps=100,\n",
     "    learning_rate=5e-5,\n",
     "    per_device_train_batch_size=32,\n",
-    "    per_device_eval_batch_size=32,\n",
+    "    per_device_eval_batch_size=128,\n",
     "    max_steps=30000,\n",
-    "    save_steps=1000\n",
+    "    save_steps=1000,\n",
+    "    predict_with_generate=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "103c94b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e947434a",
+   "id": "a8d5d4a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,39 +316,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2d22be6",
+   "id": "0aa24197",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer = transformers.Trainer(\n",
+    "trainer = transformers.Seq2SeqTrainer(\n",
     "    model=model,\n",
     "    args=trainer_args,\n",
     "    data_collator=collator,\n",
-    "    train_dataset=dataset[\"train\"],\n",
-    "    eval_dataset=dataset[\"validation\"],\n",
     "    tokenizer = tokenizer,\n",
-    "    callbacks=[early_stopping]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92a92596",
+   "id": "f5678904",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7660a949",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainer.model.save_pretrained(\"s2s_lemmatizer\")"
+    "test_data=dataset[\"test\"].select(range(133))\n",
+    "predictions=trainer.predict(test_data)\n",
+    "for x,e in zip(predictions.predictions,test_data):\n",
+    "    print(e[\"form_tags\"],tokenizer.decode(x))\n",
+    "#print(model(batch))\n",
+    "#print(batch)"
    ]
   }
  ],
