--- a/hf_seq2seq_lemmatization.ipynb
+++ b/hf_seq2seq_lemmatization.ipynb
@@ -779,25 +779,25 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\" IN:\",tokenizer.decode(dataset[\"train\"][0][\"input_ids\"]))\n",
-        "print(\"OUT:\",tokenizer.decode(dataset[\"train\"][0][\"labels\"]))"
+        "print(\" IN:\",tokenizer.convert_ids_to_tokens(dataset[\"train\"][0][\"input_ids\"]))\n",
+        "print(\"OUT:\",tokenizer.convert_ids_to_tokens(dataset[\"train\"][0][\"labels\"]))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YSMLSY6DzuvM",
-        "outputId": "1ca08ed6-1ca4-496d-f616-e5c453de082a"
+        "outputId": "dc3d33ed-70a9-45c2-f379-0f5fdf047b65"
       },
       "id": "YSMLSY6DzuvM",
-      "execution_count": 14,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " IN: [CLS] [unused1] l a s k e t t a v a a VERB Case = Par Degree = Pos Number = Sing PartForm = Pres VerbForm = Part Voice = Pass [unused2] [SEP]\n",
-            "OUT: [CLS] [unused1] l a s k e a [unused2] [SEP]\n"
+            " IN: ['[CLS]', '[unused1]', 'l', 'a', 's', 'k', 'e', 't', 't', 'a', 'v', 'a', 'a', 'V', '##ER', '##B', 'Cas', '##e', '=', 'Par', 'De', '##gr', '##ee', '=', 'Pos', 'Nu', '##mb', '##er', '=', 'Sing', 'Par', '##t', '##F', '##orm', '=', 'Pres', 'Ver', '##b', '##F', '##orm', '=', 'Par', '##t', 'Voi', '##ce', '=', 'Pas', '##s', '[unused2]', '[SEP]']\n",
+            "OUT: ['[CLS]', '[unused1]', 'l', 'a', 's', 'k', 'e', 'a', '[unused2]', '[SEP]']\n"
           ]
         }
       ]
